--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 			name="keywords"
 			content="coin, platformer, collect, game, engine, fun, joy, gold, gamemaker, assets"
 		/>
-		<meta name="og:image" content="assets/img/banner.png" />
+		<meta
+			name="og:image"
+			content="https://collect-the-coins.vercel.app/assets/img/banner.png"
+		/>
 		<meta name="twitter:title" content="Collect the Coins" />
 		<meta name="twitter:description" content="Collect the damn coins" />
-		<meta name="twitter:image" content="assets/img/banner.png" />
+		<meta
+			name="twitter:image"
+			content="https://collect-the-coins.vercel.app/assets/img/banner.png"
+		/>
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta http-equiv="pragma" content="no-cache" />
